# pvi

./: .gitignore  CHANGELOG.md  LICENSE  README.md  __main__.py  build_onefile.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: onefile-build.yml  release.yml
src/pvi/: __main__.py  app.py  cli.py  help.md  modals.py
tests/: test_app_tree_filter.py  test_build_onefile.py  test_cli.py
