[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "pvi-editor"
version = "0.1.0"
description = "Textual-based TUI editor with file tree and syntax highlighting."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "koaqiu" }
]
dependencies = [
  "textual[syntax]>=0.76.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.11.0"
]
bundle = [
  "pyinstaller>=6.14.0"
]

[project.scripts]
pvi = "pvi.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["src/pvi"]
